--- a/CarSale.DAL/CarSale.DAL.csproj
+++ b/CarSale.DAL/CarSale.DAL.csproj
@@ -16,4 +16,8 @@
     <PackageReference Include="Microsoft.Extensions.Caching.SqlServer" Version="9.0.0" />
   </ItemGroup>
 
+  <ItemGroup>
+    <ProjectReference Include="..\CarSales.Interfaces\CarSales.Interfaces.csproj" />
+  </ItemGroup>
+
 </Project>
